<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YoteAviso!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_registro">Registro</string>
    <string name="BIENVENIDO">Bienvenido</string>
    <string name="ENTRAR">Entrar</string>
    <string name="NOTIENES">¿No tienes cuenta?</string>
    <string name="REGISTRATE">¡Regìstrate!</string>
    <string name="PUBLICIDAD">¡Contàctanos por publicidad!</string>
    <string name="title_activity_inicio">Inicio</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

</resources>
